# desktop-mcp

./: .gitignore  Cargo.toml  README.md
src/: main.rs
